--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vite": "^2.9.9"
   },
   "dependencies": {
+    "@auth0/auth0-spa-js": "^1.22.0",
     "axios": "^0.27.2",
     "page": "^1.11.6"
   }
